# plenopticam

./: .gitignore  NOTES.txt  main.py  pyproject.toml
plenopticam/lfp_aligner/: lfp_local_resampler.py
plenopticam/lfp_refocuser/: lfp_shiftandsum.py
plenopticam/misc/: data_proc.py
plenopticam/scripts/metrics/: refo_metrics_plt.py
